       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.

In 0.10:
--------
  patchlevel 28:
     - added WindowsPlacement=interactive,10 and 
	WindowsPlacement=manual. The number after interactive indicates
	what percentage from the current desktop array should represent
	the total overlap area before manual placement to be enforced. 
	This value can be bigger than 100 :-) (Cristian Tibirna)
     - fixed iconified windows avoidance bug in smart placement (CT)
     - electric borders: Just move the cursor to the border of
       the screen, wait a short time and kwm will magically change the
       current virtual desktop. The interval can be specified in 
       milliseconds with the ElectricBorder property in the kwmrc. 
       ElectricBorder=-1 dissables the feature.

         
  patchlevel 27:
     - support for shaded windows a la openstep.
     - new option:
             TitlebarDoubleClickCommand=winMaximize/winShade/winMove/
                 winResize, winRestore/winIconify/winClose/winSticky/
                 winOperations

       Please notice the "winShade" function :)

       Shading raises two new sounds:
                  "Window Shade Up"
                  "Window Shade Down"

       [ I do not know how OpenStep handles this, but I think it is 
         a feature that the bounding box (when dragging a shaded window
         in transparent mode) shows the original size! ]

       Hopefully kcmkwm will soon support this feature, too.

     - new windowPlacement=cascade (Cristian Tibirna)
     - new option
                      TraverseAll=on/off
       which makes Alt-Tab traverse all windows on all virtual desktops.