@@ -11,7 +11,18 @@ influences from my experiences with the former kwm.
 
 In 0.10:
 --------
-  patchlevel 28:
+  patchlevel 29:
+  
+  	- Bernd:
+  	ElectricBorders are great but difficult to use. Added option
+	ElectricBorderMovePointer which takes 0 or 1 as parameter.
+	If ElectricBorderMovepointer is 0 ( false) the original behaviour
+	implemented by Matthias is exhibited. If it is 1 ( true) the
+	mouse pointer is moved to the middle of the desktop after
+	an 'electric border' desktop switch.
+	
+  
+  patchlevel 28:  
      - added WindowsPlacement=interactive,10 and 
 	WindowsPlacement=manual. The number after interactive indicates
 	what percentage from the current desktop array should represent
